src/objects/Pipeline_Tracker__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>BDC</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>HDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Wipro_Sales_Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wipro Sales Resource</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Pipeline Tracker</relationshipLabel>
        <relationshipName>Pipeline_Tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Pipeline Tracker</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Pipeline Tracker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pipeline Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>